# BlitzenEngine0.X

./: CMakeLists.txt  README.md
ExternalDependencies/VkBootstrap/: VkBootstrap.cpp  VkBootstrap.h
ExternalDependencies/fastgltf/src/: simdjson.cpp
VulkanShaders/: .GlobalShaderData.h.un~  .IndirectDrawShader.vert.glsl.un~  GlobalShaderData.h  GlobalShaderData.h~  IndirectCulling.comp.glsl  IndirectDrawShader.vert  IndirectDrawShader.vert.glsl  IndirectDrawShader.vert.glsl~  IndirectGlobalData.glsl  InputStructures.glsl  MainGeometryShader.frag  MainGeometryShader.frag.glsl  MainGeometryShader.vert  MainGeometryShader.vert.glsl
src/: mainEngine.cpp  mainEngine.h
src/BlitzenVulkan/: vulkanData.cpp  vulkanData.h  vulkanInit.cpp  vulkanPipelines.cpp  vulkanPipelines.h  vulkanRenderer.cpp  vulkanRenderer.h
src/Core/: blitAssert.h  blitEvents.h  blitLogger.h  blitMemory.h  blitzenContainerLibrary.h  blitzenEvents.cpp  blitzenLogger.cpp  blitzenMemory.cpp  math.h
src/Game/: camera.cpp  camera.h
src/Input/: controller.cpp  controller.h
src/Platform/: blitPlatform.h  blitzenPlatform.cpp
